add execute() method in VideoServiceController

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <version>0.5</version>
         </dependency>
 
+        <!-- service dependencies -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
         <dependency>
             <groupId>org.postgresql</groupId>
